name:                to-do-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/to-do-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable to-do-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       MissingH
                     , aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , listsafe
                     , optparse-applicative
                     , strict
                     , text
                     , time
                     , yaml
